edited some things

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <h5 id="username-text">username</h5>
                 <p id="job-position">Job Position</p>
             </div>
+            <i class="fa-solid fa-right-from-bracket" id="logout-icon"></i>
             
           </div>
         </div>
