--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Preloader -->
           <!-- Add this to the beginning of your HTML file -->
+          <!-- Test comment -->
           <div id="preloader">
             <div id="loader"></div>
           </div>
